; ModuleID = '/home/carl/AnghaBench/linux/kernel/sched/extr_fair.c_put_prev_entity.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/sched/extr_fair.c_put_prev_entity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cfs_rq = type { i32* }
%struct.sched_entity = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cfs_rq*, %struct.sched_entity*)* @put_prev_entity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_prev_entity(%struct.cfs_rq* %0, %struct.sched_entity* %1) #0 {
  %3 = alloca %struct.cfs_rq*, align 8
  %4 = alloca %struct.sched_entity*, align 8
  store %struct.cfs_rq* %0, %struct.cfs_rq** %3, align 8
  store %struct.sched_entity* %1, %struct.sched_entity** %4, align 8
  %5 = load %struct.sched_entity*, %struct.sched_entity** %4, align 8
  %6 = getelementptr inbounds %struct.sched_entity, %struct.sched_entity* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load %struct.cfs_rq*, %struct.cfs_rq** %3, align 8
  %11 = call i32 @update_curr(%struct.cfs_rq* %10)
  br label %12

12:                                               ; preds = %9, %2
  %13 = load %struct.cfs_rq*, %struct.cfs_rq** %3, align 8
  %14 = call i32 @check_cfs_rq_runtime(%struct.cfs_rq* %13)
  %15 = load %struct.cfs_rq*, %struct.cfs_rq** %3, align 8
  %16 = load %struct.sched_entity*, %struct.sched_entity** %4, align 8
  %17 = call i32 @check_spread(%struct.cfs_rq* %15, %struct.sched_entity* %16)
  %18 = load %struct.sched_entity*, %struct.sched_entity** %4, align 8
  %19 = getelementptr inbounds %struct.sched_entity, %struct.sched_entity* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %32

22:                                               ; preds = %12
  %23 = load %struct.cfs_rq*, %struct.cfs_rq** %3, align 8
  %24 = load %struct.sched_entity*, %struct.sched_entity** %4, align 8
  %25 = call i32 @update_stats_wait_start(%struct.cfs_rq* %23, %struct.sched_entity* %24)
  %26 = load %struct.cfs_rq*, %struct.cfs_rq** %3, align 8
  %27 = load %struct.sched_entity*, %struct.sched_entity** %4, align 8
  %28 = call i32 @__enqueue_entity(%struct.cfs_rq* %26, %struct.sched_entity* %27)
  %29 = load %struct.cfs_rq*, %struct.cfs_rq** %3, align 8
  %30 = load %struct.sched_entity*, %struct.sched_entity** %4, align 8
  %31 = call i32 @update_load_avg(%struct.cfs_rq* %29, %struct.sched_entity* %30, i32 0)
  br label %32

32:                                               ; preds = %22, %12
  %33 = load %struct.cfs_rq*, %struct.cfs_rq** %3, align 8
  %34 = getelementptr inbounds %struct.cfs_rq, %struct.cfs_rq* %33, i32 0, i32 0
  store i32* null, i32** %34, align 8
  ret void
}

declare dso_local i32 @update_curr(%struct.cfs_rq*) #1

declare dso_local i32 @check_cfs_rq_runtime(%struct.cfs_rq*) #1

declare dso_local i32 @check_spread(%struct.cfs_rq*, %struct.sched_entity*) #1

declare dso_local i32 @update_stats_wait_start(%struct.cfs_rq*, %struct.sched_entity*) #1

declare dso_local i32 @__enqueue_entity(%struct.cfs_rq*, %struct.sched_entity*) #1

declare dso_local i32 @update_load_avg(%struct.cfs_rq*, %struct.sched_entity*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
